# homeassistant-mcp

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: EXAMPLES.md  README.md  cursor_config.json
src/homeassistant_mcp/: __init__.py  config.py  exceptions.py  models.py  server.py
src/homeassistant_mcp/hass/: __init__.py  cache.py  client.py  performance.py
src/homeassistant_mcp/prompts/: __init__.py  automation.py  climate.py  control.py  energy.py  explain.py  models.py  safety.py  safety_templates.py  scene.py  security.py  status.py  troubleshooting.py
tests/: __init__.py  conftest.py  test_config.py  test_error_handling.py  test_integration.py  test_logging.py  test_models.py  test_performance.py  test_prompt_integration.py  test_server.py
tests/property/: __init__.py  test_backward_compatibility_properties.py  test_cache_hint_presence.py  test_calendar_properties.py  test_camera_properties.py  test_client_filtering_properties.py  test_config_properties.py  test_core_api_properties.py  test_entity_list_truncation.py  test_error_log_properties.py  test_history_properties.py  test_history_resource_properties.py  test_intent_properties.py  test_lightweight_entity_summaries.py  test_mime_type_properties.py  test_not_found_error_properties.py  test_prompt_properties.py  test_resource_discovery_properties.py  test_resource_properties.py  test_response_envelope_properties.py  test_security_properties.py  test_service_properties.py  test_services_resource_properties.py  test_state_properties.py  test_template_properties.py  test_uri_parsing_properties.py  test_validation_properties.py
tests/test_prompts/: conftest.py  test_control.py  test_error_handling.py  test_explain.py  test_migrated_prompts.py  test_parameter_validation.py  test_safety.py  test_status.py  test_visibility_controls.py
tests/test_resources/: __init__.py  test_areas.py  test_backward_compatibility_integration.py  test_cache_hints.py  test_content_format.py  test_devices.py  test_entities.py  test_error_sanitization.py  test_history.py  test_registration.py  test_resource_discovery.py  test_services.py
tests/test_tools/: test_alarm.py  test_automation.py  test_cache.py  test_camera.py  test_client_rest_api.py  test_climate.py  test_control.py  test_cover.py  test_devices.py  test_fan.py  test_hass_client.py  test_history.py.skip  test_humidifier.py  test_input_helpers.py  test_lawn_mower.py  test_lights.py  test_lock.py  test_logbook.py  test_media_player.py  test_notify.py  test_scene.py  test_script.py  test_siren.py  test_switch.py  test_vacuum.py  test_valve.py  test_water_heater.py  test_weather.py
tests/unit/: test_resources_models.py  test_resources_parsing.py
(+58 files in other folders)
